express: parse the exif data on the server side and pass the orientation field to the client and use CSS to orient it. only issue is that because node-exif is async, the orientation is not ready until after the first refresh. based on answer from https://stackoverflow.com/a/46013100/388127

--- a/public/css/eventbot.css
+++ b/public/css/eventbot.css
@@ -31,6 +31,18 @@ img{
 	padding: 1%;
 }
 
+.img-thumbnail[data-orientation="8"] {
+	transform:rotate(270deg);
+}
+
+.img-thumbnail[data-orientation="6"] {
+	transform:rotate(90deg);
+}
+
+.img-thumbnail[data-orientation="3"] {
+	transform:rotate(180deg);
+}
+
 .img-thumbnail {
 	margin-bottom: 5px;
 	max-height: 401px;
